--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+<audio src="/music/good_enough.mp3" controls>
+<p>If you are reading this, it is because your browser does not support the audio element.</p>
+</audio>
 html {
   background-color: lightblue;
 }
