--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
 html {
   background-color: lightblue;
+	margin-top: 12px;
+  margin-right: 10px; 
+  margin-bottom: 8px;
+  margin-left: 16px; 
 }
 
 p {	
